# octopod

./: Cargo.toml  README.md
octopod/: Cargo.toml
octopod-macros/: Cargo.toml
octopod-macros/src/: lib.rs
octopod/src/: driver.rs  emitter.rs  lib.rs  resource.rs  sealed.rs  service.rs
src/: lib.rs
